objects/KeyValueListStore__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Batch_Query_1__c</fullName>
        <description>WHERE Clause used to retrieve the appropriate records based on selected List View(SFD-18)</description>
        <label>Batch Query 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Query__c</fullName>
        <description>WHERE Clause used to retrieve the appropriate records based on selected Batch class</description>
        <label>Batch Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Email__c</fullName>
        <description>To send an email to specified user in case of Batch job fails</description>
        <label>Failure Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>TextValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KeyValueListStore</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TextValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>